--- a/MezhTransStroy/Authorization.xaml
+++ b/MezhTransStroy/Authorization.xaml
@@ -13,16 +13,13 @@
             <VisualBrush TileMode="Tile" Viewport="0,0,120,50" ViewportUnits="Absolute">
                 <VisualBrush.Visual>
                     <Canvas Width="120" Height="50">
-                        <!-- Сам бетонный блок -->
+                        <!-- Бетонный блок -->
                         <Rectangle Width="120" Height="50">
                             <Rectangle.Fill>
                                 <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
                                     <GradientStop Color="#B0BEC5" Offset="0"/>
-                                    <!-- Светло-серый -->
                                     <GradientStop Color="#90A4AE" Offset="0.5"/>
-                                    <!-- Средний серый -->
                                     <GradientStop Color="#78909C" Offset="1"/>
-                                    <!-- Тёмно-серый -->
                                 </LinearGradientBrush>
                             </Rectangle.Fill>
                         </Rectangle>
@@ -30,7 +27,7 @@
                         <!-- Разделительная линия между блоками (эффект шва) -->
                         <Rectangle Width="120" Height="2" Fill="DarkGray" Opacity="0.7" Canvas.Top="48"/>
 
-                        <!-- Имитация текстуры пыли/шероховатости -->
+                        <!-- Имитация текстуры пыли -->
                         <Ellipse Width="2" Height="2" Fill="Gray" Opacity="0.4" Canvas.Left="20" Canvas.Top="15"/>
                         <Ellipse Width="3" Height="3" Fill="Black" Opacity="0.3" Canvas.Left="60" Canvas.Top="25"/>
                         <Ellipse Width="2" Height="2" Fill="DarkGray" Opacity="0.5" Canvas.Left="90" Canvas.Top="35"/>
