--- a/MezhTransStroy/CostsPage.xaml
+++ b/MezhTransStroy/CostsPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="MezhTransStroy.ReportsPage"
+﻿<Page x:Class="MezhTransStroy.CostsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:MezhTransStroy"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="ReportsPage">
+      Title="CostsPage">
 
     <Grid Margin="10">
         <GroupBox Header="Выбор отчёта" HorizontalAlignment="Left" VerticalAlignment="Top" Width="292" Height="108" Margin="70,20,0,0" Background="Beige ">
@@ -15,7 +15,7 @@
         </GroupBox>
 
         <GroupBox Header="Данные отчёта" Margin="70,150,10,50" Background="Beige ">
-            <DataGrid x:Name="ReportsDataGrid" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  ColumnWidth="*" >
+            <DataGrid x:Name="ReportsDataGrid" IsReadOnly="True" AutoGenerateColumns="True" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  ColumnWidth="*" >
                 <DataGrid.Resources>
                     <Style TargetType="DataGridColumnHeader">
                         <Setter Property="HorizontalContentAlignment" Value="Center"/>
