--- a/MezhTransStroy/Roles/AdminPage.xaml
+++ b/MezhTransStroy/Roles/AdminPage.xaml
@@ -6,7 +6,8 @@
       xmlns:local="clr-namespace:MezhTransStroy.Roles"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="AdminPage">
+      Title="AdminPage"   
+      >
 
     <Grid PreviewMouseDown="Grid_PreviewMouseDown" Background="Transparent">
         <Grid.RowDefinitions>
@@ -33,22 +34,26 @@
             <Border BorderThickness="1"
                  BorderBrush="#FF000000"
                  x:Name="SideMenu">
-                <StackPanel Width="219" Orientation="Vertical" HorizontalAlignment="Center" Height="450"  Background="Gray">
-                    <Button Content="Отделы" Height="30" Margin="3,7" Click="Button_Sections_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
-                    <Button Content="Сотрудники" Height="30" Margin="3,7" Click="Button_Employees_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
-                    <Button Content="Строительные объекты" Height="30" Margin="3,7" Click="Button_Construction_Objects_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
-                    <Button Content="Материалы" Height="30" Margin="3,7" Click="Button_Materials_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
-                    <Button Content="Поставщики" Height="30" Margin="3,7" Click="Button_Suppliers_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
-                    <Button Content="Склад" Height="30" Margin="3,7" Click="Button_Warehouse_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
-                    <Button Content="Заявки" Height="30" Margin="3,7" Click="Button_Applications_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
-                    <Button Content="Распределение материалов на объект" Height="30" Margin="3,7" Click="Button_Allocation_of_Materials_to_the_Object_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
-                    <Button Content="Работа на объекте" Height="30" Margin="3,7" Click="Button_Work_On_Object_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
-                    <Button Content="Пользователи" Height="30" Margin="3,7" Click="Button_Users_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
+                <StackPanel Width="219" Orientation="Vertical" HorizontalAlignment="Center" Height="510"  Background="Gray">
+                    <Button Content="Отделы" Height="30" Margin="3" Click="Button_Sections_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
+                    <Button Content="Сотрудники" Height="30" Margin="3" Click="Button_Employees_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
+                    <Button Content="Строительные объекты" Height="30" Margin="3" Click="Button_Construction_Objects_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
+                    <Button Content="Материалы" Height="30" Margin="3" Click="Button_Materials_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
+                    <Button Content="Оборудование" Height="30" Margin="3" Click="Button_Equipment_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
+                    <Button Content="Поставщики" Height="30" Margin="3" Click="Button_Suppliers_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
+                    <Button Content="Склады" Height="30" Margin="3" Click="Button_Warehouse_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
+                    <Button Content="Материалы на складах" Height="30" Margin="3" Click="Button_Materials_In_Stock_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
+                    <Button Content="Заявки" Height="30" Margin="3" Click="Button_Applications_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
+                    <Button Content="Распределение материалов на объект" Height="30" Margin="3" Click="Button_Allocation_of_Materials_to_the_Object_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
+                    <Button Content="Работа на объекте" Height="30" Margin="3" Click="Button_Work_On_Object_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
+                    <Button Content="Затраты на оборудование" Height="30" Margin="3" Click="Button_Equipment_Сosts_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
+                    <Button Content="ЗП сотрудников" Height="30" Margin="3" Click="Button_Salary_Wage_Employees_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
+                    <Button Content="Пользователи" Height="30" Margin="3" Click="Button_Users_Click" FontSize="10" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
                 </StackPanel>
             </Border>
         </StackPanel>
 
-        <DataGrid CanUserAddRows="False" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Column="1" Grid.Row="0" x:Name="DataGrid" AutoGenerateColumns="False"  ColumnWidth="*" IsReadOnly="False" Padding="0,0,0,0">
+        <DataGrid CanUserAddRows="False" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Column="1" Grid.Row="0" x:Name="DataGrid" AutoGenerateColumns="False"  MinWidth="900" IsReadOnly="False" Padding="0,0,0,0" ScrollViewer.CanContentScroll="False">
             <DataGrid.Resources>
                 <Style TargetType="DataGridColumnHeader">
                     <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -77,19 +82,23 @@
              HorizontalAlignment="Center"
              Margin="55,0,0,0"/>
         </Grid>
-        <StackPanel x:Name="StackPanel2" Grid.Column="2" Margin="0,40,10,0" Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Top" Width="159" Visibility="Hidden" >
+        <StackPanel x:Name="StackPanel2" Grid.Column="2" Margin="0,20,10,0" Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Top" Width="159" Visibility="Hidden" >
             <TextBlock Text="ID" Margin="5" HorizontalAlignment="Center" FontFamily="Yu Gothic UI Semibold"/>
             <TextBox x:Name="TextBoxID" Margin="5" Height="20" />
 
             <TextBlock Text="Название" Margin="5" HorizontalAlignment="Center" FontFamily="Yu Gothic UI Semibold" />
             <TextBox x:Name="TextBoxName" Margin="5" Height="20" />
 
-            <Button Content="Добавить" Click="ButtonAdd_Click" Margin="5,15,5,5" Background="LightGreen" Height="30" FontFamily="Yu Gothic UI Semibold"/>
-            <Button Content="Сохранить" Click="ButtonEdit_Click" Margin="5,15,5,5" Background="Khaki" Height="30" FontFamily="Yu Gothic UI Semibold"/>
-            <Button Content="Удалить" Click="ButtonDelete_Click" Margin="5,15,5,5" Background="Tomato" Height="30" FontFamily="Yu Gothic UI Semibold"/>
-            <Button Content="Обновить" Click="ButtonUpdate_Click" Margin="5,15,5,5" Background="YellowGreen" Height="30" FontFamily="Yu Gothic UI Semibold"/>
-            <Button Content="Фильтрация" Click="ButtonFilter_Click" Margin="5,15,5,5" Background="BlanchedAlmond" Height="30" FontFamily="Yu Gothic UI Semibold"/>
-            <Button Content="Отчёты" Click="ButtonReport_Click" Margin="5,15,5,5" Background="#ADD8E6" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+            <Button Content="Добавить" Click="ButtonAdd_Click" Margin="5,20,5,5" Background="LightGreen" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+            <Button Content="Сохранить" Click="ButtonEdit_Click" Margin="5,10,5,5" Background="Khaki" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+            <Button Content="Удалить" Click="ButtonDelete_Click" Margin="5,10,5,5" Background="Tomato" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+            <Button Content="Обновить" Click="ButtonUpdate_Click" Margin="5,10,5,5" Background="YellowGreen" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+            <Button Content="Фильтрация" Click="ButtonFilter_Click" Margin="5,10,5,5" Background="BlanchedAlmond" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+            <Button Content="Отчёты" Click="ButtonReport_Click" Margin="5,10,5,5" Background="#ADD8E6" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+            <Button Content="Обработать заявки" Click="Button_ProcessApplications_Click" Margin="5,10,5,5" Background="Beige" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+            <Button Content="Уведомления" Click="ButtonNotifications_Click" Margin="5,10,5,5" Background="Khaki" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+            <Button Content="Движения материалов" Click="ButtonMaterialMovements_Click" Margin="5,10,5,5" Background="Thistle" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+            <Button Content="Затраты" Click="ButtonCosts_Click" Margin="5,10,5,5" Background="SandyBrown" Height="30" FontFamily="Yu Gothic UI Semibold"/>
         </StackPanel>
     </Grid>
 </Page>
