--- a/MezhTransStroy/MainWindow.xaml
+++ b/MezhTransStroy/MainWindow.xaml
@@ -26,12 +26,13 @@
             </VisualBrush>
         </Grid.Background>
 
-
-        <Grid  Grid.Row ="0" Background="RosyBrown" Panel.ZIndex="1">
-            <Image Source="Images/stroy.png" HorizontalAlignment="Left" Margin="56,-11,0,-17" Width="194"/>
-            <TextBlock Text="ООО МежТрансСтрой" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
-            <Button Content="Назад" Name="ButtonBack" HorizontalAlignment="Right" Click="ButtonBack_Click" Width="110" Background="Tomato" Margin="680,8,10,7" Panel.ZIndex="2"></Button>
-        </Grid>
+        <Border BorderBrush="Black" BorderThickness="1">
+            <Grid  Grid.Row ="0" Background="RosyBrown" Panel.ZIndex="1">
+                <Image Source="Images/stroy.png" HorizontalAlignment="Left" Margin="56,-11,0,-17" Width="194"/>
+                <TextBlock Text="ООО МежТрансСтрой" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+                <Button Content="Назад" Name="ButtonBack" HorizontalAlignment="Right" Click="ButtonBack_Click" Width="110" Background="Tomato" Margin="680,8,10,7" Panel.ZIndex="2"></Button>
+            </Grid>
+        </Border>
         <Frame Name="MainFrame" Grid.Row="1" NavigationUIVisibility="Hidden"></Frame>
     </Grid>
 </Window>
