--- a/MezhTransStroy/Roles/AdminPage.xaml
+++ b/MezhTransStroy/Roles/AdminPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:MezhTransStroy.Roles"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="1000" d:DesignWidth="1200"
       Title="AdminPage"   
       >
 
@@ -96,7 +96,16 @@
             <Button Content="Фильтрация" Click="ButtonFilter_Click" Margin="5,10,5,5" Background="BlanchedAlmond" Height="30" FontFamily="Yu Gothic UI Semibold"/>
             <Button Content="Отчёты" Click="ButtonReport_Click" Margin="5,10,5,5" Background="#ADD8E6" Height="30" FontFamily="Yu Gothic UI Semibold"/>
             <Button Content="Обработать заявки" Click="Button_ProcessApplications_Click" Margin="5,10,5,5" Background="Beige" Height="30" FontFamily="Yu Gothic UI Semibold"/>
-            <Button Content="Уведомления" Click="ButtonNotifications_Click" Margin="5,10,5,5" Background="Khaki" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+            <Button Content="Уведомления"  x:Name="BtnNotifications" Click="ButtonNotifications_Click" Margin="5,10,5,5" Background="Khaki" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+            <Grid HorizontalAlignment="Center" VerticalAlignment="Top">
+                <Border x:Name="NotificationBadge" Background="Red" Width="25" Height="25" 
+                  CornerRadius="12.5" Margin="0,-70,-130,0"
+                  Visibility="Visible">
+                    <TextBlock x:Name="NotificationCountText" Text="0" Foreground="White"
+                     FontSize="14" FontWeight="Bold"
+                     HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                </Border>
+            </Grid>
             <Button Content="Движения материалов" Click="ButtonMaterialMovements_Click" Margin="5,10,5,5" Background="Thistle" Height="30" FontFamily="Yu Gothic UI Semibold"/>
             <Button Content="Затраты" Click="ButtonCosts_Click" Margin="5,10,5,5" Background="SandyBrown" Height="30" FontFamily="Yu Gothic UI Semibold"/>
         </StackPanel>
