--- a/MezhTransStroy/Applications/Application_Materials_At_ObjectPage.xaml
+++ b/MezhTransStroy/Applications/Application_Materials_At_ObjectPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:MezhTransStroy"
       mc:Ignorable="d" 
-      d:DesignHeight="1000" d:DesignWidth="1366"
+      d:DesignHeight="1000" d:DesignWidth="1500"
       Title="Application_Materials_At_ObjectPage">
 
     <Page.Resources>
@@ -31,7 +31,7 @@
 
     <Grid >
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="700" />
+            <ColumnDefinition Width="930" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
@@ -39,7 +39,7 @@
         Content="Создать заявку"
         Style="{StaticResource RoundedButtonStyle}"
         Width="192" Height="54"
-        Margin="776,24,0,0"
+        Margin="300,24,0,0"
         HorizontalAlignment="Center"
         VerticalAlignment="Top"
         Background="Khaki"
@@ -50,10 +50,10 @@
 
         <GroupBox Header="Израсходованные материалы"
               Grid.Column="0"
-              Margin="10,100,584,100"
+              Margin="80,100,86,100"
               Background="Beige"
               BorderBrush="#4CAF50"
-              BorderThickness="1" Grid.ColumnSpan="2">
+              BorderThickness="1">
             <DataGrid x:Name="UsedMaterialsDataGrid"
           AutoGenerateColumns="False"
           CanUserAddRows="False"
@@ -96,12 +96,12 @@
                 </DataGrid.RowStyle>
             </DataGrid>
         </GroupBox>
-        <StackPanel Grid.Column="1" Margin="108,124,20,20">
+        <StackPanel Grid.Column="1" Margin="10,124,10,20">
             <TextBlock Text="Мои заявки:" 
                    FontSize="24" 
                    FontWeight="Bold" 
                    HorizontalAlignment="Center"
-                   Margin="-15,-7,0,10"/>
+                   Margin="-30,-7,0,10"/>
 
             <Grid>
                 <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
@@ -110,7 +110,7 @@
                      Background="Transparent">
                         <ListBox.ItemsPanel>
                             <ItemsPanelTemplate>
-                                <UniformGrid Columns="2" />
+                                <UniformGrid Columns="2" Width="600" />
                             </ItemsPanelTemplate>
                         </ListBox.ItemsPanel>
 
