--- a/MezhTransStroy/Notifications/ForwardedMaterialsAtObject.xaml
+++ b/MezhTransStroy/Notifications/ForwardedMaterialsAtObject.xaml
@@ -43,15 +43,15 @@
         <Button Content="Очистить все записи"
                 Style="{StaticResource RoundedButtonStyle}"
                 Width="191" Height="54"
-                Margin="1150,12,0,0"
-                HorizontalAlignment="Left"
+                Margin="0,20,30,0"
+                HorizontalAlignment="Right"
                 VerticalAlignment="Top"
                 Background="Tomato"
                 Click="ClearAllForwardedMaterials_Click"/>
 
         <Button Width="191" Height="54"
-                Margin="920,12,0,0"
-                HorizontalAlignment="Left"
+                Margin="0,20,250,0"
+                HorizontalAlignment="Right"
                 VerticalAlignment="Top"
                 Background="Khaki"
                 Style="{StaticResource RoundedButtonStyle}"
