--- a/MezhTransStroy/Notifications/NotificationPage.xaml
+++ b/MezhTransStroy/Notifications/NotificationPage.xaml
@@ -34,7 +34,7 @@
         <Button 
                 Style="{StaticResource RoundedButtonStyle}"
                 Width="191" Height="70"
-                Margin="24,12,0,0"
+                Margin="24,20,0,0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Background="Khaki"
@@ -51,7 +51,7 @@
         <Button 
                 Style="{StaticResource RoundedButtonStyle}"
                 Width="200" Height="70"
-                Margin="240,12,0,0"
+                Margin="240,20,0,0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Background="LightGreen"
@@ -68,8 +68,8 @@
         <Button 
                 Style="{StaticResource RoundedButtonStyle}"
                 Width="191" Height="70"
-                Margin="930,12,0,0"
-                HorizontalAlignment="Left"
+                Margin="0,45,250,0"
+                HorizontalAlignment="Right"
                 VerticalAlignment="Top"
                 Background="MediumAquamarine"
                 Click="RedirectedMaterials_Click">
@@ -83,15 +83,15 @@
         <Button Content="Очистить все уведомления"
                 Style="{StaticResource RoundedButtonStyle}"
                 Width="191" Height="54"
-                Margin="1150,12,0,0"
-                HorizontalAlignment="Left"
+                Margin="0,20,30,0"
+                HorizontalAlignment="Right"
                 VerticalAlignment="Top"
                 Background="Tomato"
                 Click="ClearNotifications_Click"/>
 
         <Button Width="191" Height="54"
-                Margin="1150,80,0,0"
-                HorizontalAlignment="Left"
+                Margin="0,90,30,0"
+                HorizontalAlignment="Right"
                 VerticalAlignment="Top"
                 Background="Tomato"
                 Style="{StaticResource RoundedButtonStyle}"
